Refactor
Rename CommandResult to MessageAction